# alive2

./: .gitignore  CMakeLists.txt
LeanProofGenerator/: 1  1.cpp  MyProject.lean  lake-manifest.json
cmake/: FindLean.cmake
lean/: CMakeLists.txt  README.md  pattern_match.cpp  pattern_match.h
lean/LeanProofGenerator/: 1  Main.lean  README.md  lake-manifest.json  lakefile.toml  type2.lean  type3.lean
lean/Testing_files/: src_add_0.ll  src_mul_0.ll  src_mul_1.ll  tgt_add_0.ll  tgt_mul_0.ll  tgt_mul_1.ll
llvm_util/: compare.cpp  compare.h
tv/: CMakeLists.txt
